--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sass",
   "version": "2.0.0",
+  "homepage": "https://adamjednacz.github.io/Projekt-2-",
   "source": "html/index.html",
   "scripts": {
     "start": "parcel",
