--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sass",
   "version": "2.0.0",
   "homepage": "https://adamjednacz.github.io/Projekt-2-",
-  "source": "html/index.html",
+  "source": "index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
