--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
     "parcel": "^2.6.0"
   }
 }
