--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,9 @@ jobs:
         run: npm run build --if-present
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Tutaj wprowadź ścieżkę do Twojego folderu dis
+          uses: JamesIves/github-pages-deploy-action@4.1.5
+          with:
+            token: ${{ secrets.GH_TOC }}
+            branch: gh-pages
+            folder: build
+            clean: true
