--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           branch: gh-pages
-          folder: build
+          folder: dist
           clean: true
